--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,15 +28,8 @@ jobs:
 
       - run: npm install
       - run: npm install mocha
-      - run: mkdir ~/junit
       - run: 
-          command: mocha test --reporter mocha-junit-reporter
-          environment:
-            MOCHA_FILE: junit/test-results.xml
-          when: always
-      - store_test_results:
-          path: ~/junit
-      - store_artifacts:
-          path: ~/junit
+          command: npm test 
+
 
 
